// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders correctly 1`] = `
<View
  style={
    {
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginBottom": 5,
      }
    }
  >
    <Text>
      Title
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "#e5e5e5",
          "borderRadius": 5,
          "borderWidth": 0.5,
          "padding": 5,
        },
        undefined,
      ]
    }
  >
    <TextInput
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      testID="input-title"
      value="My title"
    />
  </View>
</View>
`;

exports[`Input renders correctly when multiline 1`] = `
<View
  style={
    {
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginBottom": 5,
      }
    }
  >
    <Text>
      Title
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "#e5e5e5",
          "borderRadius": 5,
          "borderWidth": 0.5,
          "padding": 5,
        },
        undefined,
      ]
    }
  >
    <TextInput
      multiline={true}
      numberOfLines={3}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      testID="input-title"
      textAlignVertical="top"
      value="My title"
    />
  </View>
</View>
`;

exports[`Input renders correctly when required 1`] = `
<View
  style={
    {
      "marginBottom": 10,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "marginBottom": 5,
      }
    }
  >
    <Text
      style={
        {
          "color": "red",
          "fontStyle": "italic",
        }
      }
    >
      * 
    </Text>
    <Text>
      Title
    </Text>
  </View>
  <View
    style={
      [
        {
          "borderColor": "#e5e5e5",
          "borderRadius": 5,
          "borderWidth": 0.5,
          "padding": 5,
        },
        undefined,
      ]
    }
  >
    <TextInput
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      testID="input-title"
      value="My title"
    />
  </View>
</View>
`;

exports[`Input renders correctly when there is an error 1`] = `
[
  <View
    style={
      {
        "marginBottom": 10,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "marginBottom": 5,
        }
      }
    >
      <Text>
        Title
      </Text>
    </View>
    <View
      style={
        [
          {
            "borderColor": "#e5e5e5",
            "borderRadius": 5,
            "borderWidth": 0.5,
            "padding": 5,
          },
          {
            "borderColor": "red",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "red",
            "fontStyle": "italic",
          }
        }
      >
        Invalid title
      </Text>
      <TextInput
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        testID="input-title"
        value="new title"
      />
    </View>
  </View>,
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="submit"
  />,
]
`;
